--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -93,4 +94,17 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+.missing-card {
+	max-width: 300px;
+}
+.filter-section{
+	text-align: left;
+}
+.filter-section > ul {
+	text-align: left;
+}
+.filter-section > ul > li > label > input[type='checkbox'] {
+	margin-right: .5em;
+	margin-left: .5em;
 }
